--- a/Web/Areas/Knockout/Views/Input/Index.cshtml
+++ b/Web/Areas/Knockout/Views/Input/Index.cshtml
@@ -6,5 +6,12 @@
 
 <div id="form">
 
+<div><label>fixture qty in zone</label><input type="text" id="qty-in-zone" /></div> 
+<div><label>kw per fixure</label><input type="text" id="kw-per-fixture" /></div>
+<div><label>utility rate</label><input type="text" id="utility-rate" /></div> 
+<div><label>estimated-sell-cost</label><input type="text" id="estimated-sell-cost" /></div> 
+<div><label>weeks-per-year</label><input type="text" id="weeks-per-year" /></div> 
+<div><label>days-per-week</label><input type="text" id="days-per-week" /></div> 
+<div><label>hours-per-day</label><input type="text" id="hours-per-day" /></div> 
 
 </div>
