--- a/Web/Areas/Knockout/Views/Input/Index.cshtml
+++ b/Web/Areas/Knockout/Views/Input/Index.cshtml
@@ -15,3 +15,11 @@
 <div><label>hours-per-day</label><input type="text" id="hours-per-day" /></div> 
 
 </div>
+
+
+@section Javascript
+{ 
+    <script src="/Scripts/knockout-2.1.0.debug.js" type="text/javascript"></script>
+    @Assets.Script(scriptFile: "InputPartial.js", area: "Knockout")   
+}
+ 
