use annual hours

--- a/Web/Areas/Knockout/Views/Input/Index.cshtml
+++ b/Web/Areas/Knockout/Views/Input/Index.cshtml
@@ -17,10 +17,11 @@
     <button data-bind="click: calc">calc</button>
 
     <table>         
-        <tr><th>years</th><th>hours</th><th>months</th><th>weeks</th><th>days</th></tr>
+        <tr><th>years</th><th>annualHours</th><th>hours</th><th>months</th><th>weeks</th><th>days</th></tr>
         <tbody data-bind="foreach: results(), visible: results().length > 0">
             <tr  >
                 <td data-bind="text: year"></td>
+                <td data-bind="text: annualHours"></td>
                 <td data-bind="text: hours"></td>
                 <td data-bind="text: month"></td>
                 <td data-bind="text: week"></td>
