added calc service

--- a/Web/Areas/Knockout/Views/Input/Index.cshtml
+++ b/Web/Areas/Knockout/Views/Input/Index.cshtml
@@ -17,15 +17,14 @@
     <button data-bind="click: calc">calc</button>
 
     <table>         
-        <tr><th>years</th><th>annualHours</th><th>hours</th><th>months</th><th>weeks</th><th>days</th></tr>
+        <tr><th>years</th><th>annual</th> <th>weekly</th><th>daily</th><th>percent</th></tr>
         <tbody data-bind="foreach: results(), visible: results().length > 0">
             <tr  >
                 <td data-bind="text: year"></td>
-                <td data-bind="text: annualHours"></td>
-                <td data-bind="text: hours"></td>
-                <td data-bind="text: month"></td>
-                <td data-bind="text: week"></td>
-                <td data-bind="text: day"></td>
+                <td data-bind="text: annual"></td>
+                <td data-bind="text: weekly"></td>
+                <td data-bind="text: daily"></td>
+                <td data-bind="text: percent"></td> 
             </tr>
         </tbody>
     </table>
