--- a/Web/Content/AdminPanel.css
+++ b/Web/Content/AdminPanel.css
@@ -32,3 +32,4 @@ box-shadow:         0px 0px 22px rgba(50, 50, 50, 0.15);}
 
 .form>div{ padding:5px;}
 .form>div>label{ width:155px; display:block; float:left}
+td{ text-align: right;}
