--- a/Web/Views/Shared/_TabletLayout.cshtml
+++ b/Web/Views/Shared/_TabletLayout.cshtml
@@ -23,7 +23,7 @@
 <div data-role="page" id="one">
 
 	<div data-role="header">
-		<h1>Multi-page</h1>
+		<h1>Energy Calculator</h1>
 	</div><!-- /header -->
 
 	<div data-role="content" >	 
@@ -33,10 +33,7 @@
 
              
 	</div><!-- /content -->
-	
-	<div data-role="footer" data-theme="d">
-		<h4>Page Footer</h4>
-	</div><!-- /footer -->
+	 
 </div><!-- /page one -->
 
   
